Final Report — Javadoc "Usage Examples" audit & completion
Process

Driven entirely through the existing scripts/ toolkit, one class per
agent (parallelizable via verify_jdoc_test.py's isolated-compile
design): Step A discovery (jdoc.py report methods), Step B–D a throwaway
*JavadocVerifyTest proving every documented value against real library
behavior, Step E align_jdoc_examples.py --apply, the verify-comment-only
guard, then Step F deletion. Group 1 (Ehcache) done directly; Group 2's
14 classes done by 14 agents in two waves of 7.

Coverage

- Classes processed: 15 (every public type with in-scope documented
public methods) + 1 structural-only touch on the DistributedCacheClient
interface.
- Public methods covered: 138 / 138 — audit confirms with_examples=138,
missing_examples=0.
- Verification: ~142 throwaway tests written, all PASS, all deleted.
Every documented value proven, never guessed (mocks for
SpyMemcached/JRedis/MemcachedLock/CacheFactory; concrete subclasses for
AbstractCache/AbstractDistributedCacheClient; in-memory OffHeapStore for
OffHeap caches — no live Redis/Memcached/RocksDB).

Examples added

- 16 new example blocks where none existed: AbstractCache ×12, JRedis ×2
(getBulk overloads), DistributedCache ×2 (keySet/size).
- Plus extensive new edge/negative example lines across the audited
classes: null-key→IAE, null-value→IAE (OffHeap/Caffeine/Ehcache) vs
accepted (Local/Chronicle/Distributed/JRedis/SpyMemcached),
closed-cache→IllegalStateException, missing-key→null, idempotent no-ops,
TTL rounding, validation boundaries.

Examples fixed

- Behavior comments (// returns/// throws/post-state) added to every
call line across all 15 classes; ~10 structural missing_blank_after_pre
fixes; shallow System.out.println/assert/loop demos replaced with
asserted, verified lines.

Notable behavior corrections (documented → actual)

- LocalCache.containsKey → doc claimed it "may update access time…
extend lifetime" → actual: uses pool.peek, does NOT update acces